--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^5.2.3",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
+    "react-detect-offline": "^2.4.5",
     "react-dom": "^18.2.0",
     "web-vitals": "^2.1.4"
   },
