--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^5.2.3",
     "date-fns": "^2.29.3",
     "lodash.debounce": "^4.0.8",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-detect-offline": "^2.4.5",
     "react-dom": "^18.2.0",
